[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/BossHomemSuper.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BossHomemSuper.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Atention.png" type="Texture" id=3]
[ext_resource path="res://Cenas/InkRaycast.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/OutlineShader.gdshader" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7168, 12.0093 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.156863, 0.470588, 0.666667, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "HomemSuper",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 226.716

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.909804, 0.219608, 0.196078, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="GDScript" id=10]
script/source = "extends Sprite

var global_position_y = -16

func _process(delta):
	position.y = global_position_y + 2*sin(2*PI*delta)
	pass
"

[sub_resource type="CanvasItemMaterial" id=11]
light_mode = 1

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.60496, 8.69648 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8.65766, 1.84264 )

[node name="Boss" type="KinematicBody2D" groups=[
"minimap_objects",
]]
z_index = 1
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
material = SubResource( 2 )
scale = Vector2( 1.7, 1.7 )
frames = SubResource( 7 )
animation = "HomemSuper"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RunerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Atention" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
script = SubResource( 10 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 11 )
amount = 20
explosiveness = 0.44
lifetime_randomness = 0.14
emission_shape = 1
emission_sphere_radius = 20.0
spread = 154.57
gravity = Vector2( 0, -98 )
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0.384314, 0.607843, 1, 1 )

[node name="RayCast2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="Head" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( 0, -2.7095 )
shape = SubResource( 16 )

[node name="Legs" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs"]
position = Vector2( 0.331085, 10.0649 )
shape = SubResource( 17 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="RunerTimer" to="." method="_on_RunerTimer_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_exited" from="Head" to="." method="_on_Head_body_exited"]
[connection signal="body_entered" from="Legs" to="." method="_on_Legs_body_entered"]
[connection signal="body_exited" from="Legs" to="." method="_on_Legs_body_exited"]
